--- a/MRO_Project/ServiceHost/Areas/Administration/Pages/Organization/OrganizationGroups/Index.cshtml
+++ b/MRO_Project/ServiceHost/Areas/Administration/Pages/Organization/OrganizationGroups/Index.cshtml
@@ -3,16 +3,16 @@
 
 @{
     Layout = "Shared/_AdminLayout";
-    ViewData["title"] = "Organization Group(Type) Management";
+    ViewData["title"] = "Organization Group Management";
 }
 
 
 
 <div class="row">
     <div class="col-sm-12">
-        <h4 class="page-title pull-right">@ViewData["title"]</h4>
-        <p class="pull-left">
-            <a class="btn btn-success btn-lg" href="#showmodal=@Url.Page("./Index", "Create")" >Create New Group</a>
+        <h3 class="page-title pull-left">@ViewData["title"]</h3>
+        <p class="pull-right">
+            <a class="btn btn-success btn-lg" href="#showmodal=@Url.Page("./Index", "Create")" >Create New</a>
         </p>
     </div>
 </div>
@@ -23,16 +23,21 @@
             <div class="panel-heading">
                 <h3 class="panel-title">Search in Organization Group(Type)</h3>
             </div>
-            <div class="panel-body">
+            <div class="panel-body ">
                 <form class="form-inline" role="form" method="get">
-                    <div class="form-group"  >
-                        <label class="sr-only" asp-for="SearchModel.Name" ></label>
-                        <input class="form-control" asp-for="SearchModel.Name" placeholder="Organization Group Name">
-                        <label class="sr-only col-lg-12" asp-for="SearchModel.Description" ></label>
-                        <input class="form-control" asp-for="SearchModel.Description" placeholder="Organization Group Description">
+                    <div class="form-group">
+                        
+                                <label class="sr-only " asp-for="SearchModel.Name"></label>
+                                <input class="form-control " asp-for="SearchModel.Name" placeholder="Name">
+                            
+                                <label class="sr-only" asp-for="SearchModel.Description"></label>
+                                <input class="form-control " asp-for="SearchModel.Description" placeholder="Description">
+                           
+                                <button type="submit" class="btn btn-success waves-effect waves-light m-l-10">Search</button>
+                                <a class="btn btn-primary waves-effect waves-light m-l-10" asp-page="./Index">View All</a>
+                          
                     </div>
-                    <button type="submit" class="btn btn-success waves-effect waves-light m-l-10">Search</button>
-                    <a class="btn btn-primary waves-effect waves-light m-l-10" asp-page="./Index">View All</a>
+                   
                 </form>
             </div>
         </div>
@@ -55,6 +60,7 @@
                                     @*<th>Image</th>*@
                                     <th>Name</th>
                                     <th>Descreption</th>
+                                    <th>Code</th>
                                     <th>Creation Date</th>
                                     <th>Operation</th>
                                 </tr>
@@ -69,11 +75,12 @@
                                       </td>*@
                                     <td>@item.Name</td>
                                     <td>@item.Description</td>
+                                    <td>@item.NameCode</td>
                                     <td>@item.CreationDate</td>
                                     <td>
-                                        <a class="btn btn-warning pull-right m-rl-5"
+                                        <a class="btn btn-warning pull-left m-rl-5"
                                            href="#showmodal=@Url.Page("./Index", "Edit", new {id = item.Id})">
-                                            <i class="fa fa-edit"></i> ویرایش
+                                            <i class="fa fa-edit"></i> Edit
                                         </a>
                                     </td>
                                 </tr>
