--- a/MRO_Project/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
+++ b/MRO_Project/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
@@ -182,6 +182,7 @@
                     <a class="waves-effect"><i class="md md-mail"></i><span>Organization Settings</span><span class="pull-right"><i class="md md-add"></i></span></a>
                     <ul class="list-unstyled">
                         <li><a asp-page="/Organization/OrganizationGroups/Index">Organization Group</a></li>
+                        <li><a asp-page="/Organization/Organizations/Index">Organization</a></li>
                         <li><a href="email-compose.html">Country</a></li>
                         <li><a href="email-read.html">Organization</a></li>
                     </ul>
