Organization group modal update

--- a/MRO_Project/ServiceHost/Areas/Administration/Pages/Organization/Organizations/Create.cshtml
+++ b/MRO_Project/ServiceHost/Areas/Administration/Pages/Organization/Organizations/Create.cshtml
@@ -3,6 +3,12 @@
 }
 
 
+
+
+
+
+
+
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
     <h4 class="modal-title">New Organization</h4>
@@ -14,66 +20,233 @@
       data-callback=""
       data-action="Refresh"
       enctype="multipart/form-data">
+
     <div class="modal-body">
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label asp-for="Name" class="control-label">Name</label>
-                    <input type="text" class="form-control" asp-for="Name" >
-                    <span asp-validation-for="Name" class="error"></span>
+                    <label asp-for="NameEn" class="control-label">Name</label>
+                    <input type="text" class="form-control" asp-for="NameEn" onchange="makeSlug('NameEn','Slug')" >
+                    <span asp-validation-for="NameEn" class="error"></span>
                 </div>
-                </div>
-                @*<div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="Slug" class="control-label">Slug</label>
-                    <input type="text" class="form-control" asp-for="Slug">
-                    <span asp-validation-for="Slug" class="error"></span>
-                </div>
-            </div>*@
+            </div>
             <div class="col-md-6">
-            <div class="form-group">
-                    <label asp-for="NameCode" class="control-label">Abbraviation Code</label>
-                    <input type="text" class="form-control" asp-for="NameCode">
-                    <span asp-validation-for="NameCode" class="error"></span>
+                <div class="form-group">
+                    <label asp-for="NameFa" class="control-label">نام</label>
+                    <input type="text" class="form-control" asp-for="NameFa">
+                    <span asp-validation-for="NameFa" class="error"></span>
+                </div>
             </div>
-            </div>
-            </div>
-            <div class="row">
+        </div>
+
+        <div class="row">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label asp-for="Picture" class="control-label">Picture</label>
-                    <input type="file" class="form-control" asp-for="Picture" accept="image/*">
-                    <span asp-validation-for="Picture" class="error"></span>
+                    <label asp-for="DescriptionEn" class="control-label">Description</label>
+                    <textarea class="form-control autogrow" asp-for="DescriptionEn" onchange="fillFeild('DescriptionEn', 'MetaDescription')"
+                              style="overflow: hidden; word-wrap: break-word; resize: horizontal; height: 75px;"></textarea>
+                    <span asp-validation-for="DescriptionEn" class="error"></span>
                 </div>
             </div>
         </div>
-            <div class="row">
-           @* <div class="col-md-6">
+
+        <div class="row">
+            <div class="col-md-12">
                 <div class="form-group">
-                    <label asp-for="PictureAlt" class="control-label">Picture Alternate</label>
-                    <input type="text" class="form-control" asp-for="PictureAlt">
-                    <span asp-validation-for="PictureAlt" class="error"></span>
-                </div>
-            </div>*@
-           @* <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="PictureTitle" class="control-label">Picture Title</label>
-                    <input type="text" class="form-control" asp-for="PictureTitle">
-                    <span asp-validation-for="PictureTitle" class="error"></span>
-                </div>
-            </div>*@
-        </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="form-group no-margin">
-                        <label asp-for="Description" class="control-label">Description</label>
-                        <textarea class="form-control autogrow" asp-for="Description" 
-                                  style="overflow: hidden; word-wrap: break-word; resize: horizontal; height: 104px;"></textarea>
-                        <span asp-validation-for="Description" class="error"></span>
-                    </div>
+                    <label asp-for="DescriptionFa" class="control-label">توضیحات</label>
+                    <textarea class="form-control autogrow" asp-for="DescriptionFa" 
+                              style="overflow: hidden; word-wrap: break-word; resize: horizontal; height: 75px;"></textarea>
+                    <span asp-validation-for="DescriptionFa" class="error"></span>
                 </div>
             </div>
-            @*<div class="row">
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="OrganizationGroupId" class="control-label">Organization Group</label>
+                    <select type="text" class="form-control" asp-items='new SelectList(Model.Groups, "Id", "Name")'>
+                        <option value="0">-Organization Group-</option>
+                    </select>
+                    <span asp-validation-for="OrganizationGroupId" class="error"></span>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="OrganizationAviationCodeId" class="control-label">OrganizationAviationCodeId</label>
+                    <input type="text" class="form-control" asp-for="OrganizationAviationCodeId">
+                    @* <select type="text" class="form-control" asp-items='new SelectList(Model.Groups, "Id", "Name")'>
+                    <option value="0">-Organization Group-</option>
+                    </select>*@
+                    <span asp-validation-for="OrganizationAviationCodeId" class="error"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label asp-for="AddressEn" class="control-label">Address</label>
+                    <textarea class="form-control autogrow" asp-for="AddressEn"
+                              style="overflow: hidden; word-wrap: break-word; resize: horizontal; height: 75px;"></textarea>
+                    <span asp-validation-for="AddressEn" class="error"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label asp-for="AddressFa" class="control-label">آدرس</label>
+                        <textarea class="form-control autogrow" asp-for="AddressFa"
+                                  style="overflow: hidden; word-wrap: break-word; resize: horizontal; height: 75px;"></textarea>
+                    <span asp-validation-for="AddressFa" class="error"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label asp-for="Tel1" class="control-label">Telephone-1</label>
+                    <input type="text" class="form-control" asp-for="Tel1">
+                    <span asp-validation-for="Tel1" class="error"></span>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label asp-for="Tel2" class="control-label">Telephone-2</label>
+                    <input type="text" class="form-control" asp-for="Tel2">
+                    <span asp-validation-for="Tel2" class="error"></span>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label asp-for="Fax" class="control-label">Fax</label>
+                    <input type="text" class="form-control" asp-for="Fax">
+                    <span asp-validation-for="Fax" class="error"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4">
+            <div class="form-group">
+                <label asp-for="WebSite" class="control-label">WebSite</label>
+                <div class="input-group">
+                   <input type="text" class="form-control" asp-for="WebSite">
+                   <span class="input-group-addon"><i class="md md-web"></i></span>
+                </div> 
+                <span asp-validation-for="WebSite" class="error"></span>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="form-group">
+                <label asp-for="MailBox" class="control-label">Mailbox</label>
+                <div class="input-group">
+                   <input type="text" class="form-control" asp-for="MailBox">
+                   <span class="input-group-addon"><i class="md md-mail"></i></span>
+                 </div> 
+                <span asp-validation-for="MailBox" class="error"></span>
+            </div>
+        </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                 <label asp-for="FormedDate" class="control-label">Formed Date</label>
+                 <div class="input-group">
+                     <input class="form-control persianDateInput"  asp-for="FormedDate">
+                     <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                 </div> 
+                 <span asp-validation-for="FormedDate" class="error"></span>
+                   
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="SocialAddress1" class="control-label">Social Address-1</label>
+                    <input type="text" class="form-control" asp-for="SocialAddress1">
+                    <span asp-validation-for="SocialAddress1" class="error"></span>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="SocialAddress2" class="control-label">Social Address-2</label>
+                    <input type="text" class="form-control" asp-for="SocialAddress2">
+                    <span asp-validation-for="SocialAddress2" class="error"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label asp-for="Note" class="control-label">Note</label>
+                    <textarea class="form-control autogrow" asp-for="Note"
+                              style="overflow: hidden; word-wrap: break-word; resize: horizontal; height: 94px;"></textarea>
+                    <span asp-validation-for="Note" class="error"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+             <div class="col-md-12">
+                <div class="form-group">
+                    <label asp-for="Remark" class="control-label">Remark</label>
+                    <textarea class="form-control autogrow" asp-for="Remark"
+                              style="overflow: hidden; word-wrap: break-word; resize: horizontal; height: 94px;"></textarea>
+                    <span asp-validation-for="Remark" class="error"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="CompanyRegisterNo" class="control-label">Company Register No</label>
+                    <input type="text" class="form-control" asp-for="CompanyRegisterNo">
+                    <span asp-validation-for="CompanyRegisterNo" class="error"></span>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="ParentId" class="control-label">ParentId</label>
+                    <input type="text" class="form-control" asp-for="ParentId">
+                    <span asp-validation-for="ParentId" class="error"></span>
+                </div>
+            </div>
+        </div>
+                    
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label asp-for="LogoPicture" class="control-label">Logo-Picture</label>
+                    <input type="file" class="form-control" asp-for="LogoPicture" accept="image/*">
+                    <span asp-validation-for="LogoPicture" class="error"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="LogoPictureAlt" class="control-label">Picture Alternate</label>
+                    <input type="text" class="form-control" asp-for="LogoPictureAlt">
+                    <span asp-validation-for="LogoPictureAlt" class="error"></span>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="LogoPictureTitle" class="control-label">Picture Title</label>
+                    <input type="text" class="form-control" asp-for="LogoPictureTitle">
+                    <span asp-validation-for="LogoPictureTitle" class="error"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col-md-12">
                 <div class="form-group">
                     <label asp-for="Keywords" class="control-label">Keywords</label>
@@ -81,18 +254,39 @@
                     <span asp-validation-for="Keywords" class="error"></span>
                 </div>
             </div>
-        </div>*@
-        @*<div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label asp-for="Slug" class="control-label">Slug</label>
+                    <input type="text" class="form-control" asp-for="Slug">
+                    <span asp-validation-for="Slug" class="error"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col-md-12">
                 <div class="form-group no-margin">
                     <label asp-for="MetaDescription" class="control-label">Meta-Description</label>
                     <textarea class="form-control autogrow" asp-for="MetaDescription"
-                              style="overflow: hidden; word-wrap: break-word; resize: horizontal; height: 104px;"></textarea>
+                              style="overflow: hidden; word-wrap: break-word; resize: horizontal; height: 94px;"></textarea>
                     <span asp-validation-for="MetaDescription" class="error"></span>
                 </div>
             </div>
-        </div>*@
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group no-margin">
+                    <label asp-for="CanonicalAddress" class="control-label">Canonical Address</label>
+                    <input type="text" class="form-control" asp-for="CanonicalAddress">
+                    <span asp-validation-for="CanonicalAddress" class="error"></span>
+                </div>
+            </div>        
+        </div>
+
     </div>
+ 
+
     <div class="modal-footer">
         <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">Close</button>
         <button type="submit" class="btn btn-info waves-effect waves-light">Create</button>
