--- a/MRO_Project/ServiceHost/Areas/Administration/Pages/Organization/Organizations/Index.cshtml
+++ b/MRO_Project/ServiceHost/Areas/Administration/Pages/Organization/Organizations/Index.cshtml
@@ -29,7 +29,7 @@
                             <label class="sr-only " asp-for="SearchModel.NameEn"></label>
                             <input class="form-control " asp-for="SearchModel.NameEn" placeholder="Name">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group  element-dir-Fa">
                             <label class="sr-only " asp-for="SearchModel.NameFa"></label>
                             <input class="form-control " asp-for="SearchModel.NameFa" placeholder="نام">
                     </div>
@@ -37,7 +37,7 @@
                             <label class="sr-only" asp-for="SearchModel.DescriptionEn"></label>
                             <input class="form-control " asp-for="SearchModel.DescriptionEn" placeholder="Description">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group  element-dir-Fa">
                             <label class="sr-only" asp-for="SearchModel.DescriptionFa"></label>
                             <input class="form-control " asp-for="SearchModel.DescriptionFa" placeholder="توضیحات">
                     </div>
@@ -68,32 +68,32 @@
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <table id="datatable" class="table table-striped table-bordered">
                             <thead>
-                                <tr>
+                                <tr >
                                     <th>#</th>
-                                    @*<th>Image</th>*@
+                                    <th>Logo Picture</th>
                                     <th>Name</th>
-                                    <th>نام</th>
+                                    <th class="element-dir-Fa" >نام</th>
                                     <th>Description</th>
-                                    <th>توضیحات</th>
-                                    <th>AddressEn</th>
-                                    <th>آدرس</th>
+                                    @*<th>توضیحات</th>*@
+                                    @*<th>AddressEn</th>*@
+                                    @*<th>آدرس</th>*@
                                     <th>Telephone-1</th>
-                                    <th>Telephone-2</th>
-                                    <th>Fax</th>
+                                    @*<th>Telephone-2</th>*@
+                                   @* <th>Fax</th>
                                     <th>WebSite</th>
                                     <th>SocialAddress-1</th>
                                     <th>SocialAddress-2</th>
                                     <th>MailBox</th>
                                     <th>Note</th>
                                     <th>Remark</th>
-                                    <th>Company Register No.</th>
+                                    <th>Company Register No.</th>*@
                                     <th>Formed Date</th>
-                                    <th>Formed DateGr</th>
-                                    <th>Logo Picture</th>
+                                    @*<th>Formed DateGr</th>*@
                                     <th>ParentId</th>
                                     <th>Organization Aviation CodeId</th>
-                                    <th>Group</th>
-                                    <th>Organization GroupId</th>
+                                    <th>Organization Group</th>
+                                    <th>Activation</th>
+                                    @*<th>Organization GroupId</th>*@
                                     <th>Creation Date</th>
                                     <th>Operation</th>
 
@@ -104,38 +104,58 @@
                                 {
                                 <tr>
                                     <td>@item.Id</td>
-                                    @*<td>
-                                          <img src="~/ProductPictures/@item.Picture" style="width: 70px; height: 70px" />
-                                      </td>*@
+                                    <td>
+                                    <img src="~/ProductPictures/@item.LogoPicture" style="width: 70px; height: 70px" />
+                                      </td>
                                         <td>@item.NameEn</td>
-                                        <td>@item.NameFa</td>
+                                        <td class="element-dir-Fa" >@item.NameFa</td>
                                         <td>@item.DescriptionEn</td>
-                                        <td>@item.DescriptionFa</td>
+                                        @*<td>@item.DescriptionFa</td>
                                         <td>@item.AddressEn</td>
-                                        <td>@item.AddressFa</td>
+                                        <td>@item.AddressFa</td>*@
                                         <td>@item.Tel1</td>
-                                        <td>@item.Tel2</td>
-                                        <td>@item.Fax</td>
+                                        @*<td>@item.Tel2</td>*@
+                                        @*<td>@item.Fax</td>
                                         <td>@item.WebSite</td>
                                         <td>@item.SocialAddress1</td>
                                         <td>@item.SocialAddress2</td>
                                         <td>@item.MailBox</td>
                                         <td>@item.Note</td>
                                         <td>@item.Remark</td>
-                                        <td>@item.CompanyRegisterNo.</td>
-                                        <td>@item.FormedDate</td>
-                                        <td>@item.FormedDateGr</td>
-                                        <td>@item.LogoPicture</td>
+                                        <td>@item.CompanyRegisterNo.</td>*@
+                                        <td>@item.FormedDateGr.ToString("dd-MM-yyyy")</td>
+                                        @*<td>@item.FormedDateGr</td>*@
                                         <td>@item.ParentId</td>
                                         <td>@item.OrganizationAviationCodeId</td>
                                         <td>@item.Group</td>
-                                        <td>@item.OrganizationGroupId</td>
+                                        <td class="text-center">
+                                            @if (item.IsActive)
+                                            {
+                                                <i class ="fa fa-check fa-3x text-success"></i>
+                                            }
+                                            else
+                                            {
+                                                <i class="fa fa-remove fa-3x text-danger"></i>
+                                            }
+                                        </td>
+                                        @*<td>@item.OrganizationGroupId</td>*@
                                         <td>@item.CreationDate</td>
-                                    <td>
-                                        <a class="btn btn-warning pull-left m-rl-5"
+                                    <td >
+                                            <a class="btn btn-warning waves-effect waves-light w-xs m-b-5 "
                                            href="#showmodal=@Url.Page("./Index", "Edit", new {id = item.Id})">
                                             <i class="fa fa-edit"></i> Edit
                                         </a>
+                                        @if(item.IsActive)
+                                        {
+                                            <a asp-page="./Index" asp-page-handler="NotActive" asp-route-id="@item.Id"
+                                                   class="btn btn-danger waves-effect waves-light w-xs m-b-5">Disable</a>
+                                        }
+                                        else
+                                        {
+                                            <a asp-page="./Index" asp-page-handler="IsActive" asp-route-id="@item.Id"
+                                                   class="btn btn-success waves-effect waves-light w-xs m-b-5">Activate</a>
+                                        }
+
                                     </td>
                                 </tr>
                                 }
