Organization Picture Implemented

--- a/MRO_Project/ServiceHost/Areas/Administration/Pages/Organization/Organizations/Index.cshtml
+++ b/MRO_Project/ServiceHost/Areas/Administration/Pages/Organization/Organizations/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ServiceHost.Areas.Administration.Pages.Organization.Organizations.OrganizationsModel
+@model ServiceHost.Areas.Administration.Pages.Organization.Organizations.IndexModel
 
 @{
     Layout = "Shared/_AdminLayout";
