--- a/MRO_Project/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
+++ b/MRO_Project/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
@@ -188,7 +188,7 @@
                         <li><a asp-page="/Organization/OrganizationGroups/Index">Organization Group</a></li>
                         <li><a asp-page="/Organization/Organizations/Index">Organization</a></li>
                         <li><a href="email-compose.html">Country</a></li>
-                        <li><a href="email-read.html">Organization</a></li>
+                        <li><a asp-page="/Organization/OrganizationPictures/Index">Organization Picture</a></li>
                     </ul>
                 </li>
 
